--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                                 <Icon path={paths.shield} className="w-4 h-4"/> HINWEIS ZUR DATENERFASSUNG
                             </div>
                             <p className="text-[10px] leading-relaxed text-red-800/80">
-                                 Alles, was Sie auf dieser Seite tun oder eingeben, wird lückenlos aufgezeichnet. Ein Programm wertet diese Informationen sofort aus, um ein persönliches Bild Ihrer Person und Ihres Privatlebens zu erstellen. Einmal erfasst, bleiben diese Informationen dauerhaft gespeichert und können später nicht mehr gelöscht oder geändert werden.
+                                 Alles, was Sie auf dieser Seite tun oder eingeben, wird lückenlos aufgezeichnet. Ihre Informationen werden sofort ausgewertet, um ein persönliches Bild Ihrer Person und Ihres Privatlebens zu erstellen. Einmal erfasst, bleiben diese Informationen dauerhaft gespeichert und können später nicht mehr gelöscht oder geändert werden.
                             </p>
                         </div>
                     )}
@@ -843,7 +843,7 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                             <Icon path={paths.shield} className="w-5 h-5"/> HINWEIS ZUR DATENERFASSUNG 
                         </div>
                         <p className="text-[10px] leading-relaxed text-red-800/80">
-                            Alles, was Sie auf dieser Seite tun oder eingeben, wird lückenlos aufgezeichnet. Ein Programm wertet diese Informationen sofort aus, um ein persönliches Bild Ihrer Person und Ihres Privatlebens zu erstellen. Einmal erfasst, bleiben diese Informationen dauerhaft gespeichert und können später nicht mehr gelöscht oder geändert werden.
+                            Alles, was Sie auf dieser Seite tun oder eingeben, wird lückenlos aufgezeichnet. Ihre Informationen werden sofort ausgewertet, um ein persönliches Bild Ihrer Person und Ihres Privatlebens zu erstellen. Einmal erfasst, bleiben diese Informationen dauerhaft gespeichert und können später nicht mehr gelöscht oder geändert werden.
                         </p>
                     </div>
                 )}
