--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
         <div className={`pointer-events-none z-[100] flex flex-col items-center gap-2 ${positionClass}`}>
             {/* Weißer Glow-Effekt im Hintergrund, damit sie auf bunten Blogs auffallen */}
             <div className="flex gap-4 items-center justify-center bg-white p-2 rounded-full shadow-[0_0_30px_rgba(255,255,255,1),0_10px_30px_rgba(0,0,0,0.2)] border border-slate-100">
-                <RealisticEye color={eyeColor} className="w-20 h-14 animate-pulse-slow" hasLashes={variant === 'form'} />
-                <RealisticEye color={eyeColor} className="w-20 h-14 animate-pulse-slow" hasLashes={variant === 'form'} />
+                <RealisticEye color={eyeColor} className="w-20 h-14 animate-pulse-slow" hasLashes={true} />
+                <RealisticEye color={eyeColor} className="w-20 h-14 animate-pulse-slow" hasLashes={true} />
             </div>
         </div>
     );
