--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
                 <div className="min-h-screen bg-slate-900 flex flex-col items-center justify-center p-4 text-center">
                     <div className="bg-white p-10 md:p-16 rounded-[40px] shadow-2xl max-w-lg w-full border-t-[12px] border-green-500 animate-fade-in text-slate-800">
                         <h2 className="text-2xl md:text-3xl font-black mb-6 leading-tight">Danke fürs Ausprobieren unserer Webseite!</h2>
-                        <p className="text-lg text-slate-600 mb-10 leading-relaxed">Bitte beantworte nun noch ein paar abschließende Fragen. Klicken Sie dazu bitte auf diesen Button, um zurück zum Fragebogen zu kommen:</p>
+                        <p className="text-lg text-slate-600 mb-10 leading-relaxed">Bitte beantworten Sie nun noch ein paar abschließende Fragen. Klicken Sie dazu bitte auf diesen Button, um zurück zum Fragebogen zu kommen:</p>
                         {targetUrl ? <a href={targetUrl} className="block w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-5 rounded-2xl shadow-xl transition-all transform active:scale-95 no-underline text-xl">Zurück zum Fragebogen</a> : <div className="p-4 bg-red-50 text-red-600 rounded-xl">Fehler: Sitzungstoken nicht gefunden.</div>}
                     </div>
                 </div>
