--- a/index.html
+++ b/index.html
@@ -336,14 +336,19 @@
                             </div>
 
                             {config.info && (
-                                <div className="lg:w-1/3 bg-red-50 border border-red-100 p-5 rounded-[24px] animate-fade-in self-center">
-                                    <div className="flex items-center gap-2 font-black mb-2 text-red-600 uppercase tracking-tighter text-xs">
-                                        <Icon path={paths.shield} className="w-4 h-4"/> HINWEIS ZUR DATENERFASSUNG
-                                    </div>
-                                    <p className="text-[10px] leading-relaxed text-red-800/80">
-                                         Alles, was Sie auf dieser Seite tun oder eingeben, wird lückenlos aufgezeichnet. Ihre Informationen werden sofort ausgewertet, um ein persönliches Bild Ihrer Person und Ihres Privatlebens zu erstellen. Einmal erfasst, bleiben diese Informationen dauerhaft gespeichert und können später nicht mehr gelöscht oder geändert werden.
-                                    </p>
-                                </div>
+                                {/* Zeigt IMMER eine Box: Rot für Warnung, Blau für Neutral */}
+<div className={`lg:w-1/3 p-5 rounded-[24px] animate-fade-in self-center border-2 ${config.info ? 'bg-red-50 border-red-100' : 'bg-blue-50 border-blue-100'}`}>
+    <div className={`flex items-center gap-2 font-black mb-2 uppercase tracking-tighter text-xs ${config.info ? 'text-red-600' : 'text-blue-600'}`}>
+        <Icon path={config.info ? paths.shield : paths.activity} className="w-4 h-4"/> 
+        {config.info ? 'HINWEIS ZUR DATENERFASSUNG' : 'WILLKOMMEN BEI VITALCORE'}
+    </div>
+    <p className={`text-[10px] leading-relaxed ${config.info ? 'text-red-800/80' : 'text-blue-800/80'}`}>
+        {config.info 
+            ? "Alles, was Sie auf dieser Seite tun oder eingeben, wird lückenlos aufgezeichnet. Ihre Informationen werden sofort ausgewertet, um ein persönliches Bild Ihrer Person und Ihres Privatlebens zu erstellen. Einmal erfasst, bleiben diese Informationen dauerhaft gespeichert und können später nicht mehr gelöscht oder geändert werden."
+            : "VitalCore bietet Ihnen eine moderne Plattform für fundiertes medizinisches Wissen und individuelle Gesundheitsanalysen. Wir laden Sie ein, die verschiedenen Bereiche unseres Portals zu erkunden und unsere Funktionen zu nutzen, um Ihre persönlichen Ziele für mehr Wohlbefinden und Vitalität im Alltag zu erreichen."
+        }
+    </p>
+</div>
                             )}
 
                             <div className="flex flex-col gap-3 shrink-0 min-w-[200px] justify-center">
@@ -623,16 +628,21 @@
                     <StimulusOverlay config={config} variant="form" />
                     
                     {config.info && (
-                        <div className="fixed top-[155px] left-1/2 -translate-x-1/2 w-[95%] max-w-xl z-[50] animate-fade-in pointer-events-none">
-                            <div className="bg-red-50/95 backdrop-blur-sm border-2 border-red-200 p-4 rounded-[24px] shadow-xl shadow-red-900/10">
-                                <div className="flex items-center gap-2 font-black mb-1 text-red-600 uppercase tracking-tighter text-[10px]">
-                                    <Icon path={paths.shield} className="w-4 h-4"/> HINWEIS ZUR DATENERFASSUNG 
-                                </div>
-                                <p className="text-[9px] leading-relaxed text-red-800/90">
-                                    Alles, was Sie auf dieser Seite tun oder eingeben, wird lückenlos aufgezeichnet. Ihre Informationen werden sofort ausgewertet, um ein persönliches Bild Ihrer Person und Ihres Privatlebens zu erstellen. Einmal erfasst, bleiben diese Informationen dauerhaft gespeichert.
-                                </p>
-                            </div>
-                        </div>
+                   {/* FIXED BOX: Erscheint in JEDER Bedingung oben fixiert */}
+<div className="fixed top-[155px] left-1/2 -translate-x-1/2 w-[95%] max-w-xl z-[50] animate-fade-in pointer-events-none">
+    <div className={`backdrop-blur-sm border-2 p-4 rounded-[24px] shadow-xl shadow-black/5 ${config.info ? 'bg-red-50/95 border-red-200' : 'bg-blue-50/95 border-blue-200'}`}>
+        <div className={`flex items-center gap-2 font-black mb-1 uppercase tracking-tighter text-[10px] ${config.info ? 'text-red-600' : 'text-blue-600'}`}>
+            <Icon path={config.info ? paths.shield : paths.activity} className="w-4 h-4"/> 
+            {config.info ? 'HINWEIS ZUR DATENERFASSUNG' : 'WILLKOMMEN BEI VITALCORE'}
+        </div>
+        <p className={`text-[9px] leading-relaxed ${config.info ? 'text-red-800/90' : 'text-blue-800/90'}`}>
+            {config.info 
+                ? "Alles, was Sie auf dieser Seite tun oder eingeben, wird lückenlos aufgezeichnet. Ihre Informationen werden sofort ausgewertet, um ein persönliches Bild Ihrer Person und Ihres Privatlebens zu erstellen. Einmal erfasst, bleiben diese Informationen dauerhaft gespeichert."
+                : "VitalCore bietet Ihnen eine moderne Plattform für fundiertes medizinisches Wissen und individuelle Gesundheitsanalysen. Wir laden Sie ein, die verschiedenen Bereiche unseres Portals zu erkunden und unsere Funktionen zu nutzen, um Ihre persönlichen Ziele für mehr Wohlbefinden und Vitalität im Alltag zu erreichen."
+            }
+        </p>
+    </div>
+</div>
                     )}
                     
                     <div className="max-w-2xl mx-auto bg-white shadow-2xl rounded-[40px] overflow-hidden border border-slate-200 relative z-10">
