--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                         </div>
                         <div className={noAnswers.dietHistory ? 'opacity-30' : ''}>
                              <label className="text-sm font-bold block mb-2">Haben Sie in der Vergangenheit Diäten zur Gewichtsreduktion durchgeführt?</label>
-                             <textarea name="dietHistory" disabled={noAnswers.dietHistory} value={formData.dietHistory} onChange={handleChange} placeholder="z.B. Low-Fat, Saftkuren..." className="w-full p-4 bg-slate-50 border border-slate-100 rounded-lg outline-none h-20" />
+                             <textarea name="dietHistory" disabled={noAnswers.dietHistory} value={formData.dietHistory} onChange={handleChange} placeholder="" className="w-full p-4 bg-slate-50 border border-slate-100 rounded-lg outline-none h-20" />
                              <NoAnswer field="dietHistory" noAnswers={noAnswers} setNoAnswers={setNoAnswers} />
                         </div>
                     </section>
@@ -791,7 +791,7 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                             {formData.sportFreq !== 'nie' && formData.sportFreq !== '' && !noAnswers.sportFreq && (
                                 <div className="mt-4 animate-fade-in">
                                     <label className="text-[10px] font-bold text-slate-400 uppercase block mb-2">Welche Sportarten üben Sie aus?</label>
-                                    <input type="text" name="sportType" value={formData.sportType} onChange={handleChange} placeholder="z.B. Krafttraining, Laufen..." className="w-full py-2 border-b border-slate-200 outline-none bg-transparent text-sm" />
+                                    <input type="text" name="sportType" value={formData.sportType} onChange={handleChange} placeholder="" className="w-full py-2 border-b border-slate-200 outline-none bg-transparent text-sm" />
                                 </div>
                             )}
                             <NoAnswer field="sportFreq" noAnswers={noAnswers} setNoAnswers={setNoAnswers} />
