--- a/index.html
+++ b/index.html
@@ -424,11 +424,11 @@
         <div className="fixed bottom-0 left-0 right-0 z-50 p-4 md:p-8 bg-white shadow-[0_-20px_50px_rgba(0,0,0,0.15)] border-t-4 border-blue-600 animate-slide-up rounded-t-[40px]">
             <div className="max-w-7xl mx-auto relative pt-8">
                 
-                {/* 1. SCHWEBENDER TEIL: Augen und Info-Box sauber NEBENEINANDER */}
-<div className="absolute -top-40 left-1/2 -translate-x-1/2 flex items-center justify-center gap-8 w-full max-w-6xl pointer-events-none">
+              {/* 1. SCHWEBENDER TEIL: Augen und Info-Box nebeneinander OHNE Überlagerung */}
+<div className="absolute -top-48 left-1/2 -translate-x-1/2 flex items-center justify-center gap-10 w-[95vw] max-w-6xl pointer-events-none">
     
-    {/* Die Augen: Wir erzwingen hier 'relative', damit sie nicht in die Mitte springen */}
-    <div className="shrink-0 pointer-events-auto relative !left-0 !translate-x-0">
+    {/* Der Augen-Container: Wir erzwingen hier 'relative' und schalten die Zentrierung aus */}
+    <div className="shrink-0 pointer-events-auto relative !left-0 !translate-x-0 !transform-none w-48 flex justify-center">
         <StimulusOverlay config={config} variant="banner" />
     </div>
 
@@ -441,7 +441,7 @@
         <p className={`text-[10px] leading-relaxed ${config.info ? 'text-red-800/90' : 'text-blue-800/90'}`}>
             {config.info 
                 ? "Alles, was Sie auf dieser Seite tun oder eingeben, wird lückenlos aufgezeichnet. Ihre Informationen werden sofort ausgewertet, um ein persönliches Bild Ihrer Person und Ihres Privatlebens zu erstellen. Einmal erfasst, bleiben diese Informationen dauerhaft gespeichert."
-                : "VitalCore bietet Ihnen eine moderne Plattform für fundiertes medizinisches Wissen und individuelle Gesundheitsanalysen. Wir laden Sie ein, die verschiedenen Bereiche unseres Portals zu erkunden und unsere Funktionen zu nutzen, um Ihre persönlichen Ziele für mehr Wohlbefinden und Vitalität im Alltag zu erreichen."
+                : "VitalCore bietet Ihnen eine moderne Plattform für fundiertes medizinisches Wissen und individuelle Gesundheitsanalysen. Wir laden Sie ein, die verschiedenen Bereiche unseres Portals zu erkunden und unsere Funktionen zu nutzen."
             }
         </p>
     </div>
