--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ const BLOG_CONTENT = [
                             className={`w-full py-4 mb-8 rounded-2xl font-bold flex items-center justify-center gap-2 transition-all ${played ? 'bg-slate-100 text-slate-400' : 'bg-blue-600 text-white shadow-lg active:scale-95'}`}
                         >
                             <Icon path={paths.activity} className="w-5 h-5" />
-                            {played ? "Ton wird/wurde abgespielt" : "Ton abspielen"}
+                            {played ?  "Ton abspielen"}
                         </button>
 
                         {played && (
